--- a/templates/home.html
+++ b/templates/home.html
@@ -30,20 +30,8 @@
 </div>
     <div class="container-fluid">
         <div class="row">
-            <!-- Sidebar -->
-            <div class="col-md-3 bg-light">
-                <div class="list-group">
-                    <a href="/" class="list-group-item list-group-item-action active">Home</a>
-                    {% if current_user.is_authenticated %}
-                        <a href="/my_shortlinks" class="list-group-item list-group-item-action">My Shortlinks</a>
-                        <a href="/upgrade" class="list-group-item list-group-item-action">Upgrade to Premium</a>
-                        <a href="/logout" class="list-group-item list-group-item-action">Logout</a>
-                    {% else %}
-                        <a href="/login" class="list-group-item list-group-item-action">Login</a>
-                        <a href="/register" class="list-group-item list-group-item-action">Register</a>
-                    {% endif %}
-                </div>
-            </div>
+            <!-- Include Sidebar -->
+            {% include 'sidebar.html' %}
 
             <!-- Main Content -->
             <div class="col-md-9">
