--- a/templates/login.html
+++ b/templates/login.html
@@ -31,7 +31,7 @@
                         {% endif %}
                         <form method="POST" action="/login">
                             <div class="form-group">
-                                <label for="username">Username</label>
+                                <label for="username">Username or Email Address</label>
                                 <input type="text" class="form-control" id="username" name="username" required>
                             </div>
                             <div class="form-group">
