Hide "Upgrade to Premium"
Hide the upgrade tab if the user is already a premium member.

--- a/templates/sidebar.html
+++ b/templates/sidebar.html
@@ -4,7 +4,9 @@
         <a href="/" class="list-group-item list-group-item-action {% if request.path == '/' %}active{% endif %}">Home</a>
         {% if current_user.is_authenticated %}
             <a href="/my_shortlinks" class="list-group-item list-group-item-action {% if request.path == '/my_shortlinks' %}active{% endif %}">My Shortlinks</a>
-            <a href="/upgrade" class="list-group-item list-group-item-action {% if request.path == '/upgrade' %}active{% endif %}">Upgrade to Premium</a>
+            {% if current_user.is_premium == 0 %}
+                <a href="/upgrade" class="list-group-item list-group-item-action {% if request.path == '/upgrade' %}active{% endif %}">Upgrade to Premium</a>
+            {% endif %}
             <a href="/logout" class="list-group-item list-group-item-action">Logout</a>
         {% else %}
             <a href="/login" class="list-group-item list-group-item-action {% if request.path == '/login' %}active{% endif %}">Login</a>
