--- a/templates/my_shortlinks.html
+++ b/templates/my_shortlinks.html
@@ -13,18 +13,7 @@
         <div class="row">
             <!-- Sidebar -->
             <div class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
-                <div class="list-group">
-                    <a href="{{ url_for('home') }}" class="list-group-item list-group-item-action">
-                        Home
-                    </a>
-                    <a href="{{ url_for('my_shortlinks') }}" class="list-group-item list-group-item-action active">
-                        My Shortlinks
-                    </a>
-                    <a href="/upgrade" class="list-group-item list-group-item-action">Upgrade to Premium</a>
-                    <a href="{{ url_for('logout') }}" class="list-group-item list-group-item-action">
-                        Logout
-                    </a>
-                </div>
+                {% include 'sidebar.html' %}
             </div>
             <!-- Page Content -->
             <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-md-4 py-4">
@@ -33,7 +22,7 @@
                     <table class="table table-striped table-sm">
                         <thead>
                             <tr>
-                                <th> </th>
+                                <th>#</th>
                                 <th>Original URL</th>
                                 <th>Shortened URL</th>
                                 <th>Click Count</th>
@@ -42,15 +31,20 @@
                         <tbody>
                             {% for link in shortlinks %}
                                 <tr>
-                                  <td>{{ loop.index }}</td>
-                                  <td>{{ link['long_url'] }}</td>
-                                  <td><a href="{{ url_for('redirect_to_long_url', short_url=link['short_url']) }}" target="_blank">{{ request.host_url + link['short_url'] }}</a></td>
-                                  <td>{{ link['click_count'] }}</td>
+                                    <td>{{ loop.index }}</td>
+                                    <td>{{ link['long_url'] }}</td>
+                                    <td><a href="{{ url_for('redirect_to_long_url', short_url=link['short_url']) }}" target="_blank">{{ request.host_url + link['short_url'] }}</a></td>
+                                    <td>{{ link['click_count'] }}</td>
                                 </tr>
                             {% endfor %}
                         </tbody>
                     </table>
                 </div>
+                {% if is_premium %}
+                    <div class="pagination-wrapper">
+                        {{ pagination.links }}
+                    </div>
+                {% endif %}
             </main>
         </div>
     </div>
