--- a/templates/my_shortlinks.html
+++ b/templates/my_shortlinks.html
@@ -45,6 +45,15 @@
                         {{ pagination.links }}
                     </div>
                 {% endif %}
+            {% if not is_premium %}
+                <div class="alert alert-info mt-4" role="alert">
+                    <h4 class="alert-heading">Want to see your full history?</h4>
+                    <p>As a valued user, you currently have access to your most recent five shortlinks. But did you know that by upgrading to a premium account, you can view a complete history of your shortlinks? Not only that, but premium membership also offers enhanced features like detailed analytics, increased shortlink limits, and priority support.</p>
+                    <p>Don't miss out on the full experience. Upgrade to premium today and take control of your shortlinks with unlimited access and additional benefits. Click the link below to learn more and become a premium member.</p>
+                    <hr>
+                    <p class="mb-0"><a href="{{ url_for('premium_upgrade') }}" class="btn btn-primary">Upgrade to Premium</a></p>
+                </div>
+        {% endif %}
             </main>
         </div>
     </div>
